# practice-simple-agent

./: .env_example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/agents/: simple_agent.py  sql_agent.py
app/agents/models/: schemas.py  simple_agent_state.py  sql_agent_state.py
app/agents/prompts/: context.md  database_schema.md  simple_sql_agent.py
app/agents/services/: openai_client.py  openai_provider.py
app/agents/tools/: simple_base.py  simple_math_tools.py  simple_rag_tools.py  simple_sql_tools.py
app/core/: __init__.py  config.py
app/routers/: arena.py  chat.py  sql_chat.py
app/schemas/: conversation.py  errors.py
app/services/: __init__.py  chat_service.py  db_service.py  sql_chat_service.py
app/utils/: __init__.py
